--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/pom.xml
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/pom.xml
@@ -25,7 +25,8 @@
         <ymate.port.version>2.0.0</ymate.port.version>
         <ymate.maven.plugin.version>1.0.3-dev</ymate.maven.plugin.version>
         <ymate.module.embed.version>1.0.4-dev</ymate.module.embed.version>
-        <tomcat.version>9.0.88</tomcat.version>
+        <tomcat.version>9.0.104</tomcat.version>
+        <ecj.version>3.26.0</ecj.version>
     </properties>
 
     <!--
@@ -202,7 +203,7 @@
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpmime</artifactId>
-                <version>4.5.13</version>
+                <version>4.5.14</version>
                 <exclusions>
                     <exclusion>
                         <groupId>commons-codec</groupId>
