--- a/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-api/src/main/resources/ymp-conf.properties
+++ b/ymate-archetype-microservice/src/main/resources/archetype-resources/__rootArtifactId__-api/src/main/resources/ymp-conf.properties
@@ -130,6 +130,9 @@ ${symbol_pound}ymp.configs.persistence.jdbc.ds_default_name=
 ${symbol_pound} ${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u6E90${symbol_escape}u5217${symbol_escape}u8868, ${symbol_escape}u591A${symbol_escape}u4E2A${symbol_escape}u6570${symbol_escape}u636E${symbol_escape}u6E90${symbol_escape}u540D${symbol_escape}u79F0${symbol_escape}u95F4${symbol_escape}u7528'|'${symbol_escape}u5206${symbol_escape}u9694, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: default
 ${symbol_pound}ymp.configs.persistence.jdbc.ds_name_list=
 
+${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u81EA${symbol_escape}u52A8${symbol_escape}u8FDE${symbol_escape}u63A5, ${symbol_escape}u5373${symbol_escape}u6A21${symbol_escape}u5757${symbol_escape}u521D${symbol_escape}u59CB${symbol_escape}u5316${symbol_escape}u65F6${symbol_escape}u5B8C${symbol_escape}u6210${symbol_escape}u8FDE${symbol_escape}u63A5${symbol_escape}u52A8${symbol_escape}u4F5C, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
+${symbol_pound}ymp.configs.persistence.jdbc.ds.default.auto_connection=true
+
 ${symbol_pound} ${symbol_escape}u662F${symbol_escape}u5426${symbol_escape}u663E${symbol_escape}u793A${symbol_escape}u6267${symbol_escape}u884C${symbol_escape}u7684SQL${symbol_escape}u8BED${symbol_escape}u53E5, ${symbol_escape}u9ED8${symbol_escape}u8BA4${symbol_escape}u503C: false
 ${symbol_pound}ymp.configs.persistence.jdbc.ds.default.show_sql=true
 
